# keystone

./: .gitmodules
MyPatches/: Apply_patch.sh  keystone_options.patch
examples/: CMakeLists.txt
examples/hello/host/: host.cpp
examples/mytest/: CMakeLists.txt
examples/mytest/common/: common.h
examples/mytest/host/: quote.c
examples/mytest_esys/: CMakeLists.txt
examples/mytest_esys/common/: common.h
examples/mytest_esys/eapp/: mytest_esys.c
examples/mytest_esys/host/: quote.c  quote_esys.c
examples/quote/: CMakeLists.txt
examples/quote/eapp/: quote_eapp.c
examples/quote/host/: common.h  quote-runner.cpp
examples/quote_check/: CMakeLists.txt
examples/quote_check/eapp/: quote_check.c
examples/quote_check/host/: host.h  quote.c  quote.h
examples/quote_check_esys/: CMakeLists.txt
examples/quote_check_esys/eapp/: quote_check_esys.c
examples/quote_check_esys/host/: host.cpp  quote_esys.c
examples/quote_esys/: CMakeLists.txt
examples/quote_esys/eapp/: quote_esys_eapp.c
examples/riv_attestation/: CMakeLists.txt
examples/wasm_runner/: embedded_wasm_main.c
mkutils/plat/generic/: run.mk
overlays/keystone/: Config.in  external.mk
overlays/keystone/configs/: linux64-defconfig  riscv64_generic_defconfig
overlays/keystone/configs/riv-attestation/: linux.fragment
overlays/keystone/package/keystone-examples/: keystone-examples.mk
overlays/keystone/package/wasi-sdk/: wasi-sdk.hash  wasi-sdk.mk
overlays/keystone/package/wasm-micro-runtime/: Config.in  wasm-micro-runtime.mk
